--- a/public/v1/vs.css
+++ b/public/v1/vs.css
@@ -1,68 +1,79 @@
-/*
+/* Cyberpunk Theme *//*
+:root {
+  --selection: rgba(255, 100, 200, 0.35);
+  --background: #242424;
+  --text: #ffffff;
+  --string: #67fca8;
+  --number: #44ead9;
+  --title: #9e4ee8;
+  --built_in: #ea5452;
+  --keyword: #bc368b;
+  --function: #e552ea;
+  --params: #508be5;
+  --comment: #7f7f7f;
+}*/
 
-Visual Studio-like style based on original C# coloring by Jason Diamond <jason@diamond.name>
+/* Dark Orange Theme */
+:root {
+  --selection: rgba(224, 146, 58, 0.35);
+  --background: #242424;
+  --text: #ffffff;
+  --string: #67b26d;
+  --number: #e8a04e;
+  --title: #9e4ee8;
+  --built_in: #e25158;
+  --keyword: #e5b742;
+  --function: #e0923a;
+  --params: #508be5;
+  --comment: #7f7f7f;
+}
 
-*/
-.hljs {
+pre code {
   display: block;
   overflow-x: auto;
-  padding: 0.5em;
-  background: white;
-  color: black;
+  padding: 10px;
+  background: var(--background);
+  -webkit-text-size-adjust: none;
 }
 
-.hljs-comment,
-.hljs-quote,
-.hljs-variable {
-  color: #008000;
+pre code *::selection,
+.hljs::selection {
+  background: var(--selection) !important;
 }
 
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-built_in,
-.hljs-name,
-.hljs-tag {
-  color: #00f;
+.hljs {
+  color: var(--text);
 }
 
-.hljs-string,
-.hljs-title,
-.hljs-section,
-.hljs-attribute,
-.hljs-literal,
-.hljs-template-tag,
-.hljs-template-variable,
-.hljs-type,
-.hljs-addition {
-  color: #a31515;
+.hljs-string {
+  color: var(--string);
 }
 
-.hljs-deletion,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-meta {
-  color: #2b91af;
+.hljs-number {
+  color: var(--number) !important;
 }
 
-.hljs-doctag {
-  color: #808080;
+.hljs-title {
+  color: var(--title) !important;
 }
 
-.hljs-attr {
-  color: #f00;
+.hljs-built_in {
+  color: var(--built_in) !important;
 }
 
-.hljs-symbol,
-.hljs-bullet,
-.hljs-link {
-  color: #00b0e8;
+.hljs-keyword {
+  color: var(--keyword) !important;
 }
 
-
-.hljs-emphasis {
+.hljs-function > .hljs-keyword {
+  color: var(--function) !important;
   font-style: italic;
 }
 
-.hljs-strong {
-  font-weight: bold;
+.hljs-params {
+  color: var(--params);
+}
+
+.hljs-comment {
+  color: var(--comment);
 }
