--- a/public/v1/copy/code-box-copy.css
+++ b/public/v1/copy/code-box-copy.css
@@ -29,7 +29,7 @@
     vertical-align: middle;
     width: 16px;
     height: 16px;
-    background: url(../img/ic-copy.svg) no-repeat 0 0;
+    background: url(https://opensource.garangan.online/v1/copy/ic-copy.svg) no-repeat 0 0;
 }
 
 .code-box-copy:hover .code-box-copy__btn {
